data/derived/sp14/progs/unify/prog1443.ml.out
Characters 23-24:
  let _ = sepConcat "X" [1];;
                         ^
Error: This expression has type int but an expression was expected of type
         string
